# Blabla

./: .env.example  .gitignore  README.md  alembic.ini  env.example.txt  init.sh  main.py  pyproject.toml  requirements.txt  start.sh  start_chat_server.py  start_web_clienty.py
alembic/: env.py
alembic/versions/: eebcff1b84f8_init_schema.py
api/: main.py
api/db/: models.py
app/: modelserve.py
app/api/: main.py
app/api/db/: models.py
app/chat/: next.config.mjs  package-lock.json  package.json
app/chat/app/: globals.css  layout.js  page.js
app/chat/components/: Chat.tsx  ChatInput.tsx  ImagePreview.tsx  MarkdownClientWrapper.jsx  MarkdownRenderer.jsx  MermaidDiagram.tsx  MessageBubble.tsx  useChatStreaming.ts
app/chat/utils/: types.ts
app/old/: auth.py  client.py
app/old/static/: chat.js
app/old/templates/: index.html
chat/: server.py
core/auth/: __init__.py
docker/: docker-compose.yaml
finetuning/: download_papers.py  rag_dataset_from_chunks.py
frontend/: middleware.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Chat.tsx  ChatInput.tsx  ChatsList.tsx  ImagePreview.tsx  MarkdownRenderer.tsx  MermaidDiagram.tsx  MessageBubble.tsx  MessageList.tsx  useChatStreaming.ts
frontend/utils/: latex.ts
infra/compose/: docker-compose.yaml
libs/auth/: base.py  core.py  hashing.py  jwt.py  manager.py
libs/auth/backends/: password.py
libs/db/: __init__.py  engine.py  init_db.py  models.py  pydantic_models.py  session.py
libs/models/: __init__.py  chat.py  enums.py  message.py  model.py  user.py  user_model_custom_prompt.py
scripts/: init.sh  migrate.sh  start.sh
services/api/: Dockerfile
services/api/db/: pydantic_models.py
services/api/src/: deps.py  main.py
services/api/src/routes/: auth.py  chat.py  (+2 more)
services/worker/: Dockerfile
static/: style.css
tools/: database_builder.py  extract_chunks.py
utils/: dataset_moderation.py
web/: next.config.mjs
web/app/: page.tsx
web/components/: ImagePreview.tsx  MarkdownRenderer.tsx  MessageList.tsx
web/utils/: types.ts
worker/: Dockerfile
(+6 files in other folders)
