[project]
name = "gpu-nlp-stack"
version = "0.1.0"
requires-python = ">=3.10,<3.11"

dependencies = [
    # PyTorch CUDA 12.1
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
    # HuggingFace stack
    "transformers",
    "accelerate",
    "tokenizers",
    # FAISS GPU (CUDA 12)
    "faiss-gpu-cu12",
    # BitsAndBytes (CUDA 12)
    "bitsandbytes>=0.43",
    "openai>=2.8.0",
    "rich>=14.2.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "sse-starlette>=3.0.3",
    "python-dotenv>=1.2.1",
    "fastapi-utils>=0.8.0",
    "peft>=0.18.0",
    "arxiv>=2.3.1",
    "tqdm>=4.67.1",
    "dash>=3.3.0",
    "pypdf2>=3.0.1",
    "grobidarticleextractor>=0.7.0",
    "dash-bootstrap-components>=2.0.4",
]
