[project]
name = "localllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "lmcache>=0.3.9.post2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "vllm>=0.11.0",
]

[tool.uv]
index = [
    { name = "pytorch-cu122", url = "https://download.pytorch.org/whl/cu122" }
]
